--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -218,7 +218,7 @@ form .text-field-input div label {
   color: #f8f8f8;
 /*  background: url(../../assets/background.jpeg) no-repeat center center;
   background-size: cover;*/
-  background: #50a3a2;
+  background: #FFFFFF;
 /*  background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);*/
 }
