[style] adds new image for second banner on landing page

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -699,7 +699,7 @@ div.recipe-suggestion-card > div {
 .bar2 {
   position: relative;
   padding: 15px;
-  background-image: url('../../assets/food2.jpg');
+  background-image: url('../../assets/salad-background.jpg');
   height: 700px;
   color: white;
   width: 100%;
