--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -401,9 +401,63 @@ form .text-field-input div label {
   height: 100%;
 }
 
-.iceboxListItem {
+.icebox-item-tile {
   display: table-cell;
   vertical-align: middle;
+}
+
+.icebox-item-container {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.icebox-item-card {
+	flex: 1;
+	display: flex;
+	background-color: rgba(0,0,0,0.6);
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.icebox-item-card-title {
+	flex: 1;
+	font-family: 'Helvetica Neue', Helvetica;
+	font-size: 2em;
+	color: white;
+	margin-left: 10px;
+	padding-left: 10px;
+	margin-right: 10px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+}
+
+.icebox-item-food-group {
+	flex: 2;
+	text-align: left;
+}
+
+.icebox-item-remove-container {
+	flex: 1;
+	text-align: right;
+	padding-right: 10px;
+}
+
+.icebox-item-name {
+	flex: 2;
+	font-family: 'Helvetica Neue', Helvetica;
+	font-size: 5em;
+	color: white;
+}
+
+.icebox-item-info {
+	flex: 2;
+	font-family: 'Helvetica Neue', Helvetica;
+	font-size: 3em;
+	color: white;
 }
 
 .list-item-container {
@@ -428,32 +482,100 @@ form .text-field-input div label {
   left: 5px;
 }
 
-.expiration-red {
-  top: 13px;
-  position: absolute;
-  right: 15px;
-  color: red;
-  float: right;
-  display: table-cell;
-  vertical-align: middle;
+.Beef {
+	background-image: url('/../../assets/beef.jpg');
+	background-position: center, center;
+	background-size: cover;
 }
-.expiration-orange {
-  top: 13px;
-  position: absolute;
-  right: 15px;
-  color: orange;
-  float: right;
-  display: table-cell;
-  vertical-align: middle;
+.Beverages {
+	background-image: url('/../../assets/beverages.jpg');
+	background-position: center, center;
+	background-size: cover;
 }
-.expiration-black {
-  top: 13px;
-  position: absolute;
-  right: 15px;
-  color: black;
-  float: right;
-  display: table-cell;
-  vertical-align: middle;
+.Dairy {
+	background-image: url('/../../assets/dairy.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Fruit {
+	background-image: url('/../../assets/fruit.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Grains {
+	background-image: url('/../../assets/grains.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Lamb {
+	background-image: url('/../../assets/lamb.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Legumes {
+	background-image: url('/../../assets/legumes.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Meats {
+	background-image: url('/../../assets/meats.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Nuts {
+	background-image: url('/../../assets/nuts.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Pork {
+	background-image: url('/../../assets/pork.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Poultry {
+	background-image: url('/../../assets/poultry.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Sauces {
+	background-image: url('/../../assets/sauces.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Seafood {
+	background-image: url('/../../assets/seafood.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+.Sweets {
+	background-image: url('/../../assets/sweets.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+
+.Vegetables {
+	background-image: url('/../../assets/vegetables.jpg');
+	background-position: center, center;
+	background-size: cover;
+}
+
+.Border-Red {
+	border: 1px solid red;
+}
+.Border-Orange {
+	border: 1px solid orange;
+}
+.Border-Green {
+	border: 1px solid green;
+}
+.Expiration-Red {
+	color: red;
+}
+.Expiration-Orange {
+	color: orange;
+}
+.Expiration-Green {
+	color: green;
 }
 
 /* Tooltip container */
