--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -429,7 +429,9 @@ form .text-field-input div label {
 	color: white;
 	margin-left: 10px;
 	padding-left: 10px;
+	padding-right: 10px;
 	margin-right: 10px;
+	height: 60px;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
@@ -442,8 +444,9 @@ form .text-field-input div label {
 
 .icebox-item-remove-container {
 	flex: 1;
-	text-align: right;
-	padding-right: 10px;
+/*	text-align: right;
+	padding-right: 10px;*/
+	position: relative;
 }
 
 .icebox-item-card-body {
